force-app/main/default/objects/zkups__UPSCommercialInvoice__c/zkups__UPSCommercialInvoice__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkups__internationalShipmentHelp</customHelpPage>
    <description>UPS Commercial Invoice is a collection of data defined for generating a Commercial Invoice</description>
    <label>UPS Commercial Invoice</label>
    <nameField>
        <displayFormat>UPS-COM-INV-{0000}</displayFormat>
        <label>UPS Commercial Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Commercial Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>