force-app/main/default/objects/zkups__UPSCommercialInvoice__c/fields/zkups__FreightCharges__c.field-meta.xml
<CustomField>
    <fullName>zkups__FreightCharges__c</fullName>
    <label>Freight Charges</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>