force-app/main/default/objects/zkups__UPSCommercialInvoice__c/fields/zkups__ReasonForExport__c.field-meta.xml
<CustomField>
    <fullName>zkups__ReasonForExport__c</fullName>
    <label>Reason for Export</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>IntercompanyData</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>