force-app/main/default/objects/zkups__UPSCommercialInvoice__c/fields/zkups__SoldToContactName__c.field-meta.xml
<CustomField>
    <fullName>zkups__SoldToContactName__c</fullName>
    <label>Sold To Contact Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>