force-app/main/default/objects/zkups__UPSCommercialInvoice__c/listViews/zkups__All.listView-meta.xml
<ListView>
    <fullName>zkups__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>